# Nautical-Graph-Toolkit

./: .env.example  .gitattributes  .gitignore  C:\Users\Vikont\AppData\Local\JetBrains\PyCharm2025.2\terminal\history\1_MaritimeModule_V1-history  C:\Users\Vikont\AppData\Local\JetBrains\PyCharm2025.2\terminal\history\1_MaritimeModule_V1-history1  C:\Users\Vikont\AppData\Local\JetBrains\PyCharm2025.2\terminal\history\1_MaritimeModule_V1-history2  CHANGELOG.md  CLAUDE.md  GDAL-3.11.3.1-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.whl:Zone.Identifier  GDAL-3.11.3.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl:Zone.Identifier  INSTALL.md  MANIFEST.in  NoaaDB.csv  README.md  Start.ipynb  TEST_LAYER_CONFIGURATION.md  THIRD_PARTY_LICENSES.md  Test.ipynb  analyze_depth_sources.py  analyze_depth_sources.sql  enterprise_parallel_example.py  main.py  pyproject.toml  pyvenv.cfg  s57_advanced_optimized.py  test_all_layers_example.sh  test_depth_filter.py  verify_usage_band_priority.sql
SourceCode/: Data.py  ENC_S57_Convert.ipynb  ENC_S57_v2.ipynb  GRAPH.py  MARITIME_MODULE.py  Models.py
SourceCode/pages/: enc_analysis.py  home.py  port_info.py  route_planning.py  weather.py
data/: DATA_GUIDE.md  ENC_ROOT_UPDATE_SET.7z
data/All_ENCs/ENC_ROOT/: CATALOG.031  README.TXT
data/ENC_GPKG/: US1EEZ1M.gpkg  US1PO02M.gpkg  US2WC12M.gpkg
data/ENC_ROOT/US1EEZ1M/: US1EEZ1A.TXT  USMTZONE.TXT
data/ENC_ROOT/US1GC09M/: US1GC09A.TXT  US1GC09A.TXT:Zone.Identifier  US1GC09C.TXT  US1GC09D.TXT  US1GC09E.TXT  US1GC09M.001  US1GC09M.002  US1GC09M.003  US1GC09M.004  US1GC09M.005
data/ENC_ROOT/US2WC12M/: US2WC12M.000  US2WC12M.002  US2WC12M.007:Zone.Identifier
data/ENC_ROOT/US3CA52M/: US3CA52B.TXT  US3CA52C.TXT  US3CA52G.TXT
data/ENC_ROOT/US4CA60M/: US4CA60C.TXT  US4CA60D.TXT  US4CA60F.TXT  US4CA60G.TXT  US4CA60M.000  US4CA60M.001  US4CA60M.002  US4CA60M.003  US4CA60M.004  US4CA60M.005  US4CA60M.006
data/ENC_ROOT_UPDATE/US1GC09M/: US1GC09A.TXT  US1GC09B.TXT  US1GC09C.TXT  US1GC09D.TXT:Zone.Identifier  US1GC09E.TXT  US1GC09G.TXT  US1GC09M.000  US1GC09M.001
data/ENC_ROOT_UPDATE/US1PO02M/: US1PO02A.TXT  US1PO02A.TXT:Zone.Identifier  US1PO02B.TXT  US1PO02C.TXT  US1PO02M.001
data/ENC_ROOT_UPDATE/US2WC12M/: US2WC12A.TXT  US2WC12M.001  US2WC12M.006  US2WC12M.012
data/ENC_ROOT_UPDATE/US3CA52M/: US3CA52A.TXT  US3CA52E.TXT  US3CA52E.TXT:Zone.Identifier  US3CA52G.TXT  US3CA52H.TXT  US3CA52M.001  US3CA52M.002  US3CA52M.004  US3CA52M.005  US3CA52M.006  US3CA52M.007
data/ENC_ROOT_UPDATE/US4CA60M/: US4CA60A.TXT  US4CA60F.TXT:Zone.Identifier  US4CA60M.001
docs/: ROADMAP.md  SETUP.md  TROUBLESHOOTING.md  WEIGHTS_WORKFLOW_EXAMPLE.md  WORKFLOW_GEOPACKAGE_GUIDE.md  WORKFLOW_POSTGIS_GUIDE.md  WORKFLOW_QUICKSTART.md  WORKFLOW_S57_IMPORT_GUIDE.md  maritime_graph_geopackage_workflow.py  maritime_graph_postgis_workflow.py  maritime_workflow_config.yml
docs/notebooks/: enc_factory.ipynb  graph_GeoPackage_v2.ipynb  graph_PostGIS_v2.ipynb  graph_SpatiaLite_v2.ipynb  graph_fine_GeoPackage_v2.ipynb  graph_fine_PostGIS_v2.ipynb  graph_weighted_directed_GeoPackage_v2.ipynb  graph_weighted_directed_postgis_v2.ipynb  graph_weights.ipynb  graph_weights_PG_dir.ipynb  import_s57.ipynb  port_utils.ipynb  s57utils.ipynb
docs/notebooks/update_reports/: ENC_Update_20250821_231009.txt  ENC_Update_20250821_231633.json  ENC_Update_20250821_231633.txt  ENC_Update_20250821_234624.json  ENC_Update_20250821_234624.txt  ENC_Update_20250822_001541.json  ENC_Update_20250822_001541.txt  ENC_Update_20250822_002033.json  ENC_Update_20250822_002033.txt  ENC_Update_20250822_123448.json  ENC_Update_20250822_123448.txt  ENC_Update_20250822_160126.json  ENC_Update_20250822_160126.txt  ENC_Update_20250822_161443.json  ENC_Update_20250822_161443.txt  ENC_Update_20250822_164521.json  ENC_Update_20250822_164521.txt  ENC_Update_20250822_172520.json  ENC_Update_20250822_172520.txt  ENC_Update_20250822_174421.json  ENC_Update_20250822_174421.txt  ENC_Update_20250822_180216.json  ENC_Update_20250822_180216.txt  ENC_Update_20250822_184218.json  ENC_Update_20250822_184218.txt  ENC_Update_20250822_185248.json  ENC_Update_20250822_185248.txt  ENC_Update_20250822_190346.json  ENC_Update_20250822_190346.txt  ENC_Update_20250822_190957.json  ENC_Update_20250822_190957.txt  ENC_Update_20250822_195809.json  ENC_Update_20250822_195809.txt  ENC_Update_20250822_200816.json  ENC_Update_20250822_200816.txt  ENC_Update_20250822_202313.json  ENC_Update_20250822_202313.txt  ENC_Update_20250822_202414.json  ENC_Update_20250822_202414.txt  ENC_Update_20250822_203530.json  (+75 more)
scripts/: SCRIPTS_GUIDE.md  import_s57.py  maritime_graph_geopackage_workflow.py  maritime_graph_postgis_workflow.py
src/maritime_module/core/: __init__.py  graph.py  pathfinding_lite.py  s57_converter.py  s57_data.py
src/maritime_module/data/: WorldPortIndex_2019.csv  graph_config.yml  s57attributes.csv
src/maritime_module/utils/: db_utils.py  misc_utils.py  (+3 more)
src/nautical_graph_toolkit/: __init__.py
tests/core/: test_s57_converter.py
tests/core__real_data/: deep_test_s57_workflow.py  real_test_s57_converter.py  test_enc_factory.py
tests/utils/: test_s57_utils.py
(+21902 files in other folders)
