[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maritime-module-v1"
version = "0.1.0"
authors = [
  { name="Viktor Kolbasov", email="contact@studentdotai.com" },
]

description = "A comprehensive maritime analysis and routing toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
keywords = ["maritime", "navigation", "ENC", "S-57", "geospatial", "GIS", "routing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fiona>=1.10.1",
    "gdal==3.11.3",
    "geoalchemy2>=0.18.0",
    "geopandas>=1.1.1",
    "h3>=4.3.1",
    "ipykernel>=6.30.0",
    "nbformat>=5.10.4",
    "networkx>=3.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ruamel-yaml>=0.18.15",
    "sqlalchemy>=2.0.41",
]

[project.urls]
Homepage = "https://github.com/studentdotai/Nautical-Graph-Toolkit"
Repository = "https://github.com/studentdotai/Nautical-Graph-Toolkit"
Issues = "https://github.com/studentdotai/Nautical-Graph-Toolkit/issues"
Documentation = "https://github.com/studentdotai/Nautical-Graph-Toolkit/tree/main/docs"

[tool.setuptools]
packages = ["maritime_module"]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
maritime_module = [
    "data/*.csv",
    "data/*.yml",
]

